--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -45,6 +45,7 @@ dependencyManagement {
         mavenBom "org.springframework.cloud:spring-cloud-starter-parent:Hoxton.SR12"
     }
 }
-tasks.named('test') {
+
+test {
     useJUnitPlatform()
 }
