--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -45,7 +45,7 @@ dependencies {
 }
 dependencyManagement {
     imports {
-        mavenBom "org.springframework.cloud:spring-cloud-starter-parent:Hoxton.SR12"
+        mavenBom "org.springframework.cloud:spring-cloud-starter-parent:2021.0.4"
     }
 }
 
