--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -21,7 +21,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
-    implementation 'org.springframework.cloud:spring-cloud-starter-aws-parameter-store-config'
+    implementation 'io.awspring.cloud:spring-cloud-starter-aws-parameter-store-config'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
@@ -45,7 +45,7 @@ dependencies {
 }
 dependencyManagement {
     imports {
-        mavenBom "org.springframework.cloud:spring-cloud-starter-parent:2021.0.4"
+        mavenBom "io.awspring.cloud:spring-cloud-aws-dependencies:2.3.3"
     }
 }
 
